--- a/limit hold em.ipynb
+++ b/limit hold em.ipynb
@@ -1086,22 +1086,24 @@
     "        test_hole_cards.append(cards)\n",
     "        \n",
     "    for cards in player.card_hand:\n",
-    "        for tests in test_hole_cards:\n",
-    "            if cards.rank==tests.rank and cards.suit==tests.suit: #appending non hole cards to player.card_hand\n",
-    "                pass\n",
-    "            else:\n",
-    "                test_community_cards.append(cards)\n",
-    "        \n",
+    "        if cards in test_hole_cards:\n",
+    "            pass\n",
+    "        else:\n",
+    "            test_community_cards.append(cards)\n",
     "    \n",
+    "        \n",
+    "        \n",
+    "    str_list=[]#list to hold strings of cards so they can be compared\n",
     "    test_deck=Deck() #test deck to check all card combos\n",
     "    test_deck2=Deck() #second test deck because .remove() is giving error\n",
     "    test_deck2.all_cards.clear()\n",
-    "    for cards in test_deck.all_cards: #removing player hole cards and community cards from deck so they cant be repeated\n",
-    "        for tests in player.card_hand:\n",
-    "            if cards.rank==tests.rank and cards.suit==tests.suit:\n",
-    "                pass\n",
-    "            else:\n",
-    "                test_deck2.all_cards.append(cards)\n",
+    "    for cards in player.card_hand:\n",
+    "        str_list.append(str(cards))\n",
+    "    for cards in test_deck.all_cards:\n",
+    "        if str(cards) in str_list:\n",
+    "            pass\n",
+    "        else:\n",
+    "            test_deck2.all_cards.append(cards)\n",
     "    current_combo_num=0\n",
     "    current_better_combos=0\n",
     "    for combos in combinations(test_deck2.all_cards,2): #checking all possible card combos of opponent\n",
@@ -1112,14 +1114,17 @@
     "            alt_test_player.deal(cards)\n",
     "        alt_test_player.deal(card_com_a)\n",
     "        alt_test_player.deal(card_com_b)\n",
-    "        hand_value_check(player)\n",
     "        hand_value_check(alt_test_player)\n",
+    "        print(alt_test_player.hand_string)\n",
     "        if alt_test_player.hand_score>player.hand_score:\n",
     "            current_better_combos+=1\n",
-    "            print(\"better\")\n",
+    "            print(\"b\")\n",
+    "        elif alt_test_player.hand_score==player.hand_score:\n",
+    "            print(\"equal\")\n",
     "        else:\n",
-    "            print(\"worse\")\n",
-    "    current_win_prob=((current_better_combos/current_combo_num)*100)\n",
+    "            print(\"w\")\n",
+    "    print(\"end\")\n",
+    "    current_win_prob=100-((current_better_combos/current_combo_num)*100)\n",
     "    \n",
     "    \n",
     "    \n",
